--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   provider: ^5.0.0
   intl: ^0.17.0
   cupertino_icons: ^1.0.2
-
+  http: ^0.13.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
