--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ flutter:
 
 
   uses-material-design: true
-
+  assets: 
+    - lib/assets/images/product-placeholder.png
 
   fonts:
     - family: Lato
@@ -37,3 +38,4 @@ flutter:
       fonts:
         - asset: lib/assets/fonts/Anton-Regular.ttf
 
+  
